--- a/ML_Project.ipynb
+++ b/ML_Project.ipynb
@@ -4,11 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [
-        "02ziqslMzQtY",
-        "FHRBGxhIzDVp",
-        "39ff64c7"
-      ],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +52,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Logistic Regression from scratch**"
+        "# **Logistic Regression Classifier**"
       ],
       "metadata": {
         "id": "tE5C3kScGyFB"
@@ -95,7 +90,7 @@
         "\n",
         "\n",
         "# Logistic Regression Model\n",
-        "class LogisticRegressionScratch: # Definisce una nuova classe che implementa un modello di regressione logistica \"fatto a mano\" (scratch)\n",
+        "class LogisticRegressionClassifier: # Definisce una nuova classe che implementa un modello di regressione logistica \"fatto a mano\" (scratch)\n",
         "    def __init__(self, input_dim, lr=0.01, epochs=1000): # Metodo costruttore della classe, chiamato quando crei un'istanza\n",
         "    # input_dim: numero di feature in input\n",
         "    # lr: learning rate (passo di aggiornamento dei pesi)\n",
@@ -194,7 +189,7 @@
         "\n",
         "    # Training of the model\n",
         "    print(\"Training\")\n",
-        "    model = LogisticRegressionScratch(input_dim=X.shape[1], lr=0.1, epochs=300)\n",
+        "    model = LogisticRegressionClassifier(input_dim=X.shape[1], lr=0.1, epochs=300)\n",
         "    model.fit(X_train, y_train)\n",
         "\n",
         "    # Evaluation of the classification\n",
