Creato con Colab

--- a/ML_Project.ipynb
+++ b/ML_Project.ipynb
@@ -36,7 +36,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XszifCFzaT3R",
-        "outputId": "3120936c-11c1-4a27-c9f9-cc655644547a"
+        "outputId": "8e3720ae-32fe-461f-bbe9-6c1df13b69e9"
       },
       "execution_count": null,
       "outputs": [
@@ -44,7 +44,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -69,63 +69,63 @@
         "\n",
         "# Preprocessing Functions\n",
         "def tokenize(text):\n",
-        "    text = text.lower() # Converte tutto il testo in minuscolo\n",
-        "    text = re.sub(r'[^a-z\\s]', '', text) # Rimuove punteggiatura e numeri\n",
-        "    return text.split() # Divide il testo in una lista di parole\n",
+        "    text = text.lower() # Converts all text to lowercase\n",
+        "    text = re.sub(r'[^a-z\\s]', '', text) # Removes punctuation\n",
+        "    return text.split() # Splits the text into a list of words\n",
         "\n",
         "def build_vocab(texts, max_vocab_size=5000):\n",
-        "    counter = Counter() # Crea un oggetto Counter (da collections) per contare le occorrenze delle parole\n",
+        "    counter = Counter() # Creates an object \"Counter\" (imported from collections) to count all word occurrencies\n",
         "    for text in texts:\n",
         "        tokens = tokenize(text)\n",
         "        counter.update(tokens)\n",
-        "    vocab = {word: i for i, (word, _) in enumerate(counter.most_common(max_vocab_size))} # Seleziona le max_vocab_size parole più frequenti e assegna un indice a ciascuna\n",
+        "    vocab = {word: i for i, (word, _) in enumerate(counter.most_common(max_vocab_size))} # Selects max_vocab_size the most frequents words and assigns an index to each one\n",
         "    return vocab\n",
         "\n",
         "def vectorize(text, vocab):\n",
-        "    vec = [0] * len(vocab) # Inizializza un vettore di zeri di lunghezza pari al vocabolario\n",
-        "    for word in tokenize(text): # Per ogni parola nel testo, se è nel vocabolario, incrementa la posizione corrispondente nel vettore\n",
+        "    vec = [0] * len(vocab) # Initializes an array of zeros having the dictionary, increments the corresponding position in the vector\n",
+        "    for word in tokenize(text):\n",
         "        if word in vocab:\n",
-        "            vec[vocab[word]] += 1 # Esempio: se \"fake\" è la parola 10 nel vocabolario, vec[10] += 1.\n",
+        "            vec[vocab[word]] += 1 # Example: if \"fake\" is the 10th word inside the dictionary, vec[9] += 1\n",
         "    return vec\n",
         "\n",
         "\n",
         "# Logistic Regression Model\n",
-        "class LogisticRegressionClassifier: # Definisce una nuova classe che implementa un modello di regressione logistica \"fatto a mano\" (scratch)\n",
-        "    def __init__(self, input_dim, lr=0.01, epochs=1000): # Metodo costruttore della classe, chiamato quando crei un'istanza\n",
-        "    # input_dim: numero di feature in input\n",
-        "    # lr: learning rate (passo di aggiornamento dei pesi)\n",
-        "    # epochs: numero di iterazioni dell'allenamento\n",
-        "        self.w = np.zeros(input_dim) # Inizializza i pesi w come un vettore di zeri, con dimensione uguale al numero di feature\n",
+        "class LogisticRegressionClassifier: # Defines a new class which implements a logistic regression model\n",
+        "    def __init__(self, input_dim, lr=0.01, epochs=1000): # Contructor method\n",
+        "        # input_dim: number of input features\n",
+        "        # lr: learning rate (weights)\n",
+        "        # epochs: number of training iterations\n",
+        "        self.w = np.zeros(input_dim) # Initializes the weights \"w\" as an array of zeros, with a dimension equal to the number of features\n",
         "        self.b = 0\n",
         "        self.lr = lr\n",
         "        self.epochs = epochs\n",
-        "        self.losses = [] # Inizializza una lista vuota per salvare i valori della funzione di loss durante il training\n",
+        "        self.losses = [] # Initializes an empty list used to save the loss function values during training\n",
         "\n",
-        "    def sigmoid(self, z):  # Definisce una funzione interna alla classe per calcolare la funzione sigmoide, che trasforma un valore reale in un valore tra 0 e 1 (probabilità)\n",
-        "      z = np.clip(z, -500, 500)  # Limita i valori di z fra -500 e 500 per evitare problemi numerici di overflow con l’esponenziale (np.exp)\n",
-        "      return 1 / (1 + np.exp(-z)) # Calcola la funzione sigmoide: 1 / (1 + exp(-z)), la quale serve per ottenere le probabilità predette da qualsiasi input lineare.\n",
+        "    def sigmoid(self, z):  # Defines an internal class function to calculate the sigmoid function, which transforms a real value to a value between 0 and 1 (probability)\n",
+        "      z = np.clip(z, -500, 500)  # Limits the values of \"z\" between -500 and 500 to avoid numerical overflow problems with the exponential (np.exp)\n",
+        "      return 1 / (1 + np.exp(-z)) # Calculate the sigmoid function: 1 / (1 + exp(-z)), which is used to obtain the predicted probabilities from any linear input.\n",
         "\n",
-        "    def predict_prob(self, X): # Metodo che calcola la probabilità che l’input X appartenga alla classe 1.\n",
-        "        return self.sigmoid(np.dot(X, self.w) + self.b) # Calcola la combinazione lineare X*w + b e passa il risultato alla funzione sigmoide per ottenere la probabilità.\n",
+        "    def predict_prob(self, X): # Method that calculates the probability that input X belongs to class 1.\n",
+        "        return self.sigmoid(np.dot(X, self.w) + self.b) # Calculate the linear combination X*w + b and pass the result to the sigmoid function to obtain the probability.\n",
         "\n",
         "    def predict(self, X): # Metodo per ottenere le classi predette (0 o 1) da input X.\n",
         "        return (self.predict_prob(X) >= 0.5).astype(int) # Calcola la probabilità e converte in etichetta 0 o 1 usando soglia 0.5 (se la probabilità è ≥ 0.5 predice 1, altrimenti 0)\n",
         "\n",
-        "    def fit(self, X, y): # Metodo per allenare il modello usando i dati X (input) e y (etichette vere)\n",
-        "        for epoch in range(self.epochs): # Ciclo di training che si ripete per epochs volte\n",
-        "            y_hat = self.predict_prob(X) # Calcola le probabilità predette dal modello per tutti gli esempi X.\n",
-        "            error = y_hat - y # Calcola l’errore come differenza tra probabilità predette e valori veri (y).\n",
+        "    def fit(self, X, y): # Method to train the model using X (input) and y (true labels) data\n",
+        "        for epoch in range(self.epochs): # Training cycle that repeats for epochs times\n",
+        "            y_hat = self.predict_prob(X) # Calculate the probabilities predicted by the model for all X examples.\n",
+        "            error = y_hat - y # Calculate the error as the difference between predicted probabilities and true values (y).\n",
         "\n",
-        "            dw = np.dot(X.T, error) / len(y) # Calcola il gradiente della loss rispetto ai pesi  (media dei prodotti tra errore e input)\n",
-        "            db = np.mean(error) # Calcola il gradiente della loss rispetto al bias b (media degli errori)\n",
+        "            dw = np.dot(X.T, error) / len(y) # Calculates the gradient of loss versus weights (average of the products between error and input)\n",
+        "            db = np.mean(error) # Calculates the gradient of loss versus bias b (average of errors)\n",
         "\n",
-        "            # Aggiorna pesi e bias spostandoli nella direzione opposta al gradiente, il passo è modulato dal learning rate lr\n",
+        "            # Update weights and bias by moving them in the opposite direction of the gradient, the step is modulated by the learning rate lr\n",
         "            self.w -= self.lr * dw\n",
         "            self.b -= self.lr * db\n",
         "\n",
         "\n",
-        "            loss = -np.mean(y * np.log(y_hat + 1e-8) + (1 - y) * np.log(1 - y_hat + 1e-8)) # Calcola la cross-entropy, una misura di quanto sono sbagliate le predizioni, il 1e-8 evita log(0).\n",
-        "            self.losses.append(loss)  # Salva il loss ad ogni epoca\n",
+        "            loss = -np.mean(y * np.log(y_hat + 1e-8) + (1 - y) * np.log(1 - y_hat + 1e-8)) # Calculate the cross-entropy, a measure of how wrong the predictions are, the 1e-8 avoids log(0).\n",
+        "            self.losses.append(loss)  # Save loss at each epoch\n",
         "\n",
         "            if epoch % 100 == 0:\n",
         "                print(f\"Epoch {epoch}, Loss: {loss:.4f}\")\n",
@@ -138,51 +138,51 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "\n",
-        "    # Carica i dataset Fake.csv e True.csv, aggiungendo una colonna label (0 per fake, 1 per real).\n",
+        "    # Load the datasets Fake.csv and True.csv, adding a label column (0 for fake, 1 for real).\n",
         "    df_fake = pd.read_csv(\"/content/drive/MyDrive/Colab Notebooks/Fake.csv\", on_bad_lines='skip')\n",
         "    df_fake[\"label\"] = 0\n",
         "    df_real = pd.read_csv(\"/content/drive/MyDrive/Colab Notebooks/True.csv\", on_bad_lines='skip')\n",
         "    df_real[\"label\"] = 1\n",
         "\n",
-        "    # Serve ad unire, mescolare casualmente e reindicizzare\n",
-        "    # sample(frac=1) → Prende un campione casuale del 100% delle righe, quindi mescola casualmente tutte le righe del DataFrame unito.\n",
-        "    # Dopo il mescolamento, l’indice è disordinato (es: [10, 3, 45, ...]), .reset_index(drop=True) reimposta l’indice da zero (0, 1, 2, ...) e scarta quello vecchio (drop=True).\n",
+        "    # Serves to merge, randomly mix and re-index\n",
+        "    # sample(frac=1) → Takes a random sample of 100% of the rows, then randomly shuffles all the rows in the merged DataFrame.\n",
+        "    # After shuffling, the index is disordered (ex: [10, 3, 45, ...]), .reset_index(drop=True) resets the index from zero (0, 1, 2, ...) and discards the old one (drop=True).\n",
         "    data = pd.concat([df_fake, df_real]).sample(frac=1).reset_index(drop=True)\n",
         "\n",
-        "    # data[\"text\"] → prende la colonna text dal DataFrame data (cioè i testi delle notizie).\n",
-        "    # .fillna(\"\") → sostituisce eventuali valori NaN (mancanti) con una stringa vuota \"\", per evitare errori nel preprocessing.\n",
-        "    # .tolist() → converte la colonna (che è una Series) in una lista di stringhe.\n",
-        "    # Risultato: una lista texts contenente tutti i testi delle notizie.\n",
+        "    # data[“text”] → takes the text column from the dataFrame data (i.e., news texts).\n",
+        "    # .fillna(“”) → replaces any NaN (missing) values with an empty string “”, to avoid errors in preprocessing.\n",
+        "    # .tolist() → converts the column (which is a Series) to a list of strings.\n",
+        "    # Result: a texts list containing all news texts.\n",
         "    texts = data[\"text\"].fillna(\"\").tolist()\n",
         "\n",
-        "    # Estrae la colonna label, che contiene le etichette (es: 0 per fake, 1 per real).\n",
-        "    # .values la converte in un array NumPy, utile per modelli ML.\n",
-        "    # Risultato: un array labels con le etichette associate a ciascun testo.\n",
+        "    # Extracts the label column, which contains the labels (e.g., 0 for fake, 1 for real).\n",
+        "    # .values converts it to a NumPy array, useful for ML models.\n",
+        "    # Result: an array labels with the labels associated with each text.\n",
         "    labels = data[\"label\"].values\n",
         "\n",
-        "    # Costruisce il vocabolario a partire dalla lista di testi delle notizie\n",
+        "    # Builds vocabulary from the list of news texts\n",
         "    vocab = build_vocab(texts, max_vocab_size=2000)\n",
         "    print(f\"Vocabulary size: {len(vocab)}\")\n",
         "\n",
-        "    # Cicla su tutti i testi nella lista texts e applica la funzione vectorize a ciascuno\n",
-        "    # Esempio:\n",
-        "    # texts = [\"fake news\", \"real news\", \"fake fake\"]\n",
+        "    # Cycle over all texts in the texts list and apply the vectorize function to each one.\n",
+        "    # Example:\n",
+        "    # texts = [“fake news”, “real news”, “fake fake”]\n",
         "    # vectorize(text, vocab)\n",
-        "    # vocab = {'fake': 0, 'real': 1, 'news': 2}\n",
-        "    # texts = [\"fake news\", \"real news\", \"fake fake\"]\n",
-        "    # Inizializza un vettore con zeri: [0, 0, 0], poi per ogni parola:\n",
-        "    # \"fake\" è nel vocabolario alla posizione 0 → incremento vec[0] += 1 → [1, 0, 0]\n",
-        "    # \"news\" è alla posizione 2 → incremento vec[2] += 1 → [1, 0, 1]\n",
-        "    # vectorize(\"fake news\", vocab) → [1, 0, 1]\n",
-        "    # vectorize(\"real news\", vocab) → [0, 1, 1]\n",
-        "    # vectorize(\"fake fake\", vocab) → [2, 0, 0]\n",
+        "    # vocab = {‘fake’: 0, ‘real’: 1, ‘news’: 2}\n",
+        "    # texts = [‘fake news’, ‘real news’, ‘fake fake’]\n",
+        "    # Initialize a vector with zeros: [0, 0, 0], then for each word:\n",
+        "    # “fake” is in the vocabulary at position 0 → increment vec[0] += 1 → [1, 0, 0]\n",
+        "    # “news” is at position 2 → increment vec[2] += 1 → [1, 0, 1]\n",
+        "    # vectorize(“fake news,” vocab) → [1, 0, 1]\n",
+        "    # vectorize(“real news,” vocab) → [0, 1, 1]\n",
+        "    # vectorize(“fake fake,” vocab) → [2, 0, 0]\n",
         "    # X = [[1 0 1]\n",
-        "    #      [0 1 1]\n",
-        "    #      [2 0 0]]\n",
-        "    X = np.array([vectorize(text, vocab) for text in texts]) # Ogni riga rappresenta un testo, Ogni colonna rappresenta una parola del vocabolario, I valori sono le frequenze delle parole nel testo\n",
-        "    y = np.array(labels) # contiene le etichette corrispondenti (0 per fake, 1 per real)\n",
+        "    # [0 1 1]\n",
+        "    # [2 0 0]]\n",
+        "    X = np.array([vectorize(text, vocab) for text in texts]) # Each row represents a text, each column represents a vocabulary word, the values are the frequencies of the words in the text\n",
+        "    y = np.array(labels) # contains the corresponding labels (0 for fake, 1 for real)\n",
         "\n",
-        "    # Divide il dataset in → Training set: primi 80% dei dati |  Test set: ultimi 20% dei dati\n",
+        "    # Divides the dataset into → Training set: first 80% of the data | Test set: last 20% of the data\n",
         "    split = int(0.8 * len(X))\n",
         "    X_train, X_test = X[:split], X[split:]\n",
         "    y_train, y_test = y[:split], y[split:]\n",
@@ -194,14 +194,14 @@
         "\n",
         "    # Evaluation of the classification\n",
         "    y_pred = model.predict(X_test)\n",
-        "    print(\"Accuracy:\", accuracy(y_test, y_pred))"
+        "    print(\"Accuracy:\", accuracy(y_test, y_pred))\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gXNvD9g4G17n",
-        "outputId": "5a80f65c-d303-454c-f02d-a8dd22472865"
+        "outputId": "a343416a-a49d-46fd-9d13-ab4c24f85554"
       },
       "execution_count": null,
       "outputs": [
@@ -212,9 +212,10 @@
             "Vocabulary size: 2000\n",
             "Training\n",
             "Epoch 0, Loss: 0.6931\n",
-            "Epoch 100, Loss: 0.1872\n",
-            "Epoch 200, Loss: 0.1179\n",
-            "Accuracy: 0.9791759465478842\n"
+            "Epoch 100, Loss: 0.1845\n",
+            "Epoch 200, Loss: 0.1181\n",
+            "Accuracy: 0.9782850779510023\n",
+            "(44898, 2000)\n"
           ]
         }
       ]
